svcServiceRegistry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: svc-service-registry
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: service-registry
    app.kubernetes.io/name: service-registry
    app.openshift.io/runtime: java
  name: svc-service-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-service-registry
  template:
    metadata:
      labels:
        app: svc-service-registry
    spec:
      containers:
      - name: svc-service-registry
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/common-service/registry:41fe42023b5d87b0106034d67cb5a333f5c05f69
        ports:
        - containerPort: 8581
          protocol: TCP
